# ArgoParticles

./: .gitignore  main.py  notes.txt  observablehq.config.js  pyproject.toml  requirements.txt
.github/workflows/: weekly-deploy.yml
docs/: biovolume_concentration.parquet.py  biovolume_concentration.parquet.py.disabled  index.md  optical_sediment_trap.parquet.py  ost.py  particle_concentrations.parquet.py  particle_size_spectra.parquet.py  plankton.md  s3-LPM.parquet.py  taxo_concentration.parquet.py  taxo_concentration.parquet.py.disabled  trajectories.csv.py  utils.py
docs/notebooks/: Untitled.ipynb  ost.ipynb  s3-LPM.ipynb  s3-pss.ipynb  s3-trajectory.ipynb  utils.py
docs/old/old_R_code/: LPM_data.parquet.R  size_spectra.parquet.R  trajectory_data.csv.R
