[project]
name = "particledashboard"
version = "0.1.0"
description = "Dashboard for visualizing particle data from Biogeochemical-Argo floats"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netcdf4",
    "numpy",
    "pandas",
    "pyarrow",
    "s3fs",
    "scipy",
    "xarray",
]

[project.scripts]
particledashboard = "main:main"
